--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tguesdon-map-generator",
+  "name": "tguesdon-island-generator",
   "version": "1.0.0",
-  "description": "A map generator for games ( without renderer )",
+  "description": "An island generator for games ( without renderer )",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
