--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "tguesdon-island-generator",
   "version": "1.0.1",
   "description": "An island generator for games ( without renderer )",
-  "main": "index.js",
+  "main": "index",
+  "types": "index.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "node ./build/generator.js",
