--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "tguesdon-island-generator",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "An island generator for games ( without renderer )",
-  "main": "index",
-  "types": "index.d.ts",
+  "main": "build/generator.js",
+  "types": "src/generator.ts",
   "scripts": {
     "build": "tsc",
     "test": "node ./build/generator.js",
